# ragcheck

./: .gitignore  README.md  pyproject.toml
eval/: run_eval.py
src/ragcheck/: __init__.py  extractor.py  grounding.py  normalize.py  types.py
tests/: test_grounding.py  test_normalize.py  test_verify.py
