[project]
name = "ragcheck"
version = "0.1.0"
description = "Hallucination detection for RAG systems"
readme = "README.md"
authors = [
    { name = "magelights", email = "83825339+magelights@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "spacy>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "datasets>=2.0",
]

[build-system]
requires = ["uv_build>=0.9.23,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
hallugen = { git = "https://github.com/magelights/hallugen.git" }

[dependency-groups]
dev = [
    "hallugen",
]
